cleaned up launcher buttons